--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
+    <section class="hero"></section>
     <section class="content">
         <section id="optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Table with laptop, coffee, notebook and pens."/>
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Workspace with laptop and notebook."/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -51,21 +51,21 @@
     <section class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="Cog, funnel and dollar sign." />
+            <img src="./assets/images/lead-generation.png" alt="Lead generation graphic." />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="Lightbulb-headed person." />
+            <img src="./assets/images/brand-awareness.png" alt="Brand awareness graphic." />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
         <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="Cog and dollar signs." />
+            <img src="./assets/images/cost-management.png" alt="Cost management graphic." />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
